# acsacsacs

./: buildozer.spec  main.py  pyproject.toml  requirements.txt
app/: ACS.csv  USUARIO.csv  home_screen.kv  pending_screen.kv  pomodoro.kv
app/screens/: pending_screen.py  pomodoro_screen.py  user_add_screen.py  user_details_screen.py  user_list_screen.py
app/widgets/: custom_spinner_option.py  error_popup.py
